2021-06-13 Visenri

	* src/stm8/gen.c,
	  src/stm8/peep.c,
	  src/stm8/peeph.def:
	  STM8 - Multiple improvements regarding peephole rules & argCont function.
	  Modified code generation (genPointerSet) to allow optimizations without reordering rules for ld-and (120) from pack 1 (#362).
	  Implemented some improvements in peep.c (argCont) to avoid false 'x' positives, a tiny step towards #290.
	  Fixed double spaces in rules 10f & 10h (that were messing notUsed logic).
	  Replaced rules 18, 19, 20 & 21 by 202x, 203x, 204x 205x, 210x &220x making use of new "operandsLitOrSym".
	  Expanded rule 131 scope.
	  Modified rules (140, 141, 150, 160, 161) to work without needing rule 121 from pack 1 (#362).
	  Added new rules 515 & 516, similar to 512 & 513 when comparison is done with 'dec' instead of 'cp'.

2021-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/peep.c:
	  Implement register parameter tracking for peephole optimizer to fix code size regression caused by bugfix in previous commit.

2021-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/stm8/peep.c,
	  support/regression/tests/bug-3251.c,
	  support/regression/tests/bug-2349.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/bug-3244.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/fptr_cast_array_init.c,
	  support/regression/tests/genptrs.c,
	  support/regression/tests/z80n-push-nn.c:
	  Fix bugs #3251, #3243.

2021-06-09 Visenri

	* src/stm8/peeph.def:
	  STM8 - Added missing rule 625a from my pack #6 from patch #362, fixed tabs/spaces.

2021-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/ds390/gen.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/pic14/gen.c,
	  src/pic14/main.c,
	  src/pic14/ralloc.c,
	  src/pic16/gen.c,
	  src/pic16/main.c,
	  src/pic16/ralloc.c,
	  src/port.h,
	  src/z80/gen.c,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCcse.c,